coqr/parsing/RParser.py
# Generated from R.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class RParser ( Parser ):

    grammarFileName = "R.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'[['", "']'", "'['", "'::'", "':::'", 
                     "'$'", "'@'", "'^'", "'-'", "'+'", "':'", "'*'", "'/'", 
                     "'>'", "'>='", "'<'", "'<='", "'=='", "'!='", "'!'", 
                     "'&'", "'&&'", "'|'", "'||'", "'~'", "'<-'", "'<<-'", 
                     "'='", "'->'", "'->>'", "':='", "'function'", "'('", 
                     "')'", "'{'", "'}'", "'if'", "'else'", "'for'", "'in'", 
                     "'while'", "'repeat'", "'?'", "'next'", "'break'", 
                     "'NULL'", "'NA'", "'Inf'", "'NaN'", "'TRUE'", "'FALSE'", 
                     "','", "'...'", "'.'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "HEX", "INT", "FLOAT", "COMPLEX", "STRING", "ID", 
                      "USER_OP", "NL", "WS" ]

    RULE_prog = 0
    RULE_expr = 1
    RULE_exprlist = 2
    RULE_formlist = 3
    RULE_form = 4
    RULE_sublist = 5
    RULE_sub = 6

    ruleNames =  [ "prog", "expr", "exprlist", "formlist", "form", "sublist", 
                   "sub" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    HEX=56
    INT=57
    FLOAT=58
    COMPLEX=59
    STRING=60
    ID=61
    USER_OP=62
    NL=63
    WS=64

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(RParser.EOF, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RParser.ExprContext)
            else:
                return self.getTypedRuleContext(RParser.ExprContext,i)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(RParser.NL)
            else:
                return self.getToken(RParser.NL, i)

        def getRuleIndex(self):
            return RParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = RParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << RParser.T__9) | (1 << RParser.T__10) | (1 << RParser.T__20) | (1 << RParser.T__25) | (1 << RParser.T__32) | (1 << RParser.T__33) | (1 << RParser.T__35) | (1 << RParser.T__37) | (1 << RParser.T__39) | (1 << RParser.T__41) | (1 << RParser.T__42) | (1 << RParser.T__43) | (1 << RParser.T__44) | (1 << RParser.T__45) | (1 << RParser.T__46) | (1 << RParser.T__47) | (1 << RParser.T__48) | (1 << RParser.T__49) | (1 << RParser.T__50) | (1 << RParser.T__51) | (1 << RParser.HEX) | (1 << RParser.INT) | (1 << RParser.FLOAT) | (1 << RParser.COMPLEX) | (1 << RParser.STRING) | (1 << RParser.ID) | (1 << RParser.NL))) != 0):
                self.state = 22
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [RParser.T__9, RParser.T__10, RParser.T__20, RParser.T__25, RParser.T__32, RParser.T__33, RParser.T__35, RParser.T__37, RParser.T__39, RParser.T__41, RParser.T__42, RParser.T__43, RParser.T__44, RParser.T__45, RParser.T__46, RParser.T__47, RParser.T__48, RParser.T__49, RParser.T__50, RParser.T__51, RParser.HEX, RParser.INT, RParser.FLOAT, RParser.COMPLEX, RParser.STRING, RParser.ID]:
                    self.state = 14
                    self.expr(0)
                    self.state = 18
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
                    while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                        if _alt==1:
                            self.state = 15
                            _la = self._input.LA(1)
                            if not(_la==RParser.T__0 or _la==RParser.NL):
                                self._errHandler.recoverInline(self)
                            else:
                                self._errHandler.reportMatch(self)
                                self.consume() 
                        self.state = 20
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

                    pass
                elif token in [RParser.NL]:
                    self.state = 21
                    self.match(RParser.NL)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 26
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 27
            self.match(RParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RParser.ExprContext)
            else:
                return self.getTypedRuleContext(RParser.ExprContext,i)


        def formlist(self):
            return self.getTypedRuleContext(RParser.FormlistContext,0)


        def exprlist(self):
            return self.getTypedRuleContext(RParser.ExprlistContext,0)


        def ID(self):
            return self.getToken(RParser.ID, 0)

        def STRING(self):
            return self.getToken(RParser.STRING, 0)

        def HEX(self):
            return self.getToken(RParser.HEX, 0)

        def INT(self):
            return self.getToken(RParser.INT, 0)

        def FLOAT(self):
            return self.getToken(RParser.FLOAT, 0)

        def COMPLEX(self):
            return self.getToken(RParser.COMPLEX, 0)

        def USER_OP(self):
            return self.getToken(RParser.USER_OP, 0)

        def sublist(self):
            return self.getTypedRuleContext(RParser.SublistContext,0)


        def getRuleIndex(self):
            return RParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = RParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 30
                _la = self._input.LA(1)
                if not(_la==RParser.T__9 or _la==RParser.T__10):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 31
                self.expr(36)
                pass

            elif la_ == 2:
                self.state = 32
                self.match(RParser.T__20)
                self.state = 33
                self.expr(30)
                pass

            elif la_ == 3:
                self.state = 34
                self.match(RParser.T__25)
                self.state = 35
                self.expr(27)
                pass

            elif la_ == 4:
                self.state = 36
                self.match(RParser.T__32)
                self.state = 37
                self.match(RParser.T__33)
                self.state = 39
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << RParser.T__53) | (1 << RParser.T__54) | (1 << RParser.ID))) != 0):
                    self.state = 38
                    self.formlist()


                self.state = 41
                self.match(RParser.T__34)
                self.state = 42
                self.expr(24)
                pass

            elif la_ == 5:
                self.state = 43
                self.match(RParser.T__35)
                self.state = 44
                self.exprlist()
                self.state = 45
                self.match(RParser.T__36)
                pass

            elif la_ == 6:
                self.state = 47
                self.match(RParser.T__37)
                self.state = 48
                self.match(RParser.T__33)
                self.state = 49
                self.expr(0)
                self.state = 50
                self.match(RParser.T__34)
                self.state = 51
                self.expr(21)
                pass

            elif la_ == 7:
                self.state = 53
                self.match(RParser.T__37)
                self.state = 54
                self.match(RParser.T__33)
                self.state = 55
                self.expr(0)
                self.state = 56
                self.match(RParser.T__34)
                self.state = 57
                self.expr(0)
                self.state = 58
                self.match(RParser.T__38)
                self.state = 59
                self.expr(20)
                pass

            elif la_ == 8:
                self.state = 61
                self.match(RParser.T__39)
                self.state = 62
                self.match(RParser.T__33)
                self.state = 63
                self.match(RParser.ID)
                self.state = 64
                self.match(RParser.T__40)
                self.state = 65
                self.expr(0)
                self.state = 66
                self.match(RParser.T__34)
                self.state = 67
                self.expr(19)
                pass

            elif la_ == 9:
                self.state = 69
                self.match(RParser.T__41)
                self.state = 70
                self.match(RParser.T__33)
                self.state = 71
                self.expr(0)
                self.state = 72
                self.match(RParser.T__34)
                self.state = 73
                self.expr(18)
                pass

            elif la_ == 10:
                self.state = 75
                self.match(RParser.T__42)
                self.state = 76
                self.expr(17)
                pass

            elif la_ == 11:
                self.state = 77
                self.match(RParser.T__43)
                self.state = 78
                self.expr(16)
                pass

            elif la_ == 12:
                self.state = 79
                self.match(RParser.T__44)
                pass

            elif la_ == 13:
                self.state = 80
                self.match(RParser.T__45)
                pass

            elif la_ == 14:
                self.state = 81
                self.match(RParser.T__33)
                self.state = 82
                self.expr(0)
                self.state = 83
                self.match(RParser.T__34)
                pass

            elif la_ == 15:
                self.state = 85
                self.match(RParser.ID)
                pass

            elif la_ == 16:
                self.state = 86
                self.match(RParser.STRING)
                pass

            elif la_ == 17:
                self.state = 87
                self.match(RParser.HEX)
                pass

            elif la_ == 18:
                self.state = 88
                self.match(RParser.INT)
                pass

            elif la_ == 19:
                self.state = 89
                self.match(RParser.FLOAT)
                pass

            elif la_ == 20:
                self.state = 90
                self.match(RParser.COMPLEX)
                pass

            elif la_ == 21:
                self.state = 91
                self.match(RParser.T__46)
                pass

            elif la_ == 22:
                self.state = 92
                self.match(RParser.T__47)
                pass

            elif la_ == 23:
                self.state = 93
                self.match(RParser.T__48)
                pass

            elif la_ == 24:
                self.state = 94
                self.match(RParser.T__49)
                pass

            elif la_ == 25:
                self.state = 95
                self.match(RParser.T__50)
                pass

            elif la_ == 26:
                self.state = 96
                self.match(RParser.T__51)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 153
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 151
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                    if la_ == 1:
                        localctx = RParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 99
                        if not self.precpred(self._ctx, 39):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 39)")
                        self.state = 100
                        _la = self._input.LA(1)
                        if not(_la==RParser.T__4 or _la==RParser.T__5):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 101
                        self.expr(40)
                        pass

                    elif la_ == 2:
                        localctx = RParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 102
                        if not self.precpred(self._ctx, 38):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 38)")
                        self.state = 103
                        _la = self._input.LA(1)
                        if not(_la==RParser.T__6 or _la==RParser.T__7):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 104
                        self.expr(39)
                        pass

                    elif la_ == 3:
                        localctx = RParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 105
                        if not self.precpred(self._ctx, 37):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 37)")
                        self.state = 106
                        self.match(RParser.T__8)
                        self.state = 107
                        self.expr(37)
                        pass

                    elif la_ == 4:
                        localctx = RParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 108
                        if not self.precpred(self._ctx, 35):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 35)")
                        self.state = 109
                        self.match(RParser.T__11)
                        self.state = 110
                        self.expr(36)
                        pass

                    elif la_ == 5:
                        localctx = RParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 111
                        if not self.precpred(self._ctx, 34):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 34)")
                        self.state = 112
                        self.match(RParser.USER_OP)
                        self.state = 113
                        self.expr(35)
                        pass

                    elif la_ == 6:
                        localctx = RParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 114
                        if not self.precpred(self._ctx, 33):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 33)")
                        self.state = 115
                        _la = self._input.LA(1)
                        if not(_la==RParser.T__12 or _la==RParser.T__13):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 116
                        self.expr(34)
                        pass

                    elif la_ == 7:
                        localctx = RParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 117
                        if not self.precpred(self._ctx, 32):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 32)")
                        self.state = 118
                        _la = self._input.LA(1)
                        if not(_la==RParser.T__9 or _la==RParser.T__10):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 119
                        self.expr(33)
                        pass

                    elif la_ == 8:
                        localctx = RParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 120
                        if not self.precpred(self._ctx, 31):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 31)")
                        self.state = 121
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << RParser.T__14) | (1 << RParser.T__15) | (1 << RParser.T__16) | (1 << RParser.T__17) | (1 << RParser.T__18) | (1 << RParser.T__19))) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 122
                        self.expr(32)
                        pass

                    elif la_ == 9:
                        localctx = RParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 123
                        if not self.precpred(self._ctx, 29):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 29)")
                        self.state = 124
                        _la = self._input.LA(1)
                        if not(_la==RParser.T__21 or _la==RParser.T__22):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 125
                        self.expr(30)
                        pass

                    elif la_ == 10:
                        localctx = RParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 126
                        if not self.precpred(self._ctx, 28):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 28)")
                        self.state = 127
                        _la = self._input.LA(1)
                        if not(_la==RParser.T__23 or _la==RParser.T__24):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 128
                        self.expr(29)
                        pass

                    elif la_ == 11:
                        localctx = RParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 129
                        if not self.precpred(self._ctx, 26):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 26)")
                        self.state = 130
                        self.match(RParser.T__25)
                        self.state = 131
                        self.expr(27)
                        pass

                    elif la_ == 12:
                        localctx = RParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 132
                        if not self.precpred(self._ctx, 25):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 25)")
                        self.state = 133
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << RParser.T__26) | (1 << RParser.T__27) | (1 << RParser.T__28) | (1 << RParser.T__29) | (1 << RParser.T__30) | (1 << RParser.T__31))) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 134
                        self.expr(26)
                        pass

                    elif la_ == 13:
                        localctx = RParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 135
                        if not self.precpred(self._ctx, 41):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 41)")
                        self.state = 136
                        self.match(RParser.T__1)
                        self.state = 137
                        self.sublist()
                        self.state = 138
                        self.match(RParser.T__2)
                        self.state = 139
                        self.match(RParser.T__2)
                        pass

                    elif la_ == 14:
                        localctx = RParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 141
                        if not self.precpred(self._ctx, 40):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 40)")
                        self.state = 142
                        self.match(RParser.T__3)
                        self.state = 143
                        self.sublist()
                        self.state = 144
                        self.match(RParser.T__2)
                        pass

                    elif la_ == 15:
                        localctx = RParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 146
                        if not self.precpred(self._ctx, 23):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 23)")
                        self.state = 147
                        self.match(RParser.T__33)
                        self.state = 148
                        self.sublist()
                        self.state = 149
                        self.match(RParser.T__34)
                        pass

             
                self.state = 155
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class ExprlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RParser.ExprContext)
            else:
                return self.getTypedRuleContext(RParser.ExprContext,i)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(RParser.NL)
            else:
                return self.getToken(RParser.NL, i)

        def getRuleIndex(self):
            return RParser.RULE_exprlist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprlist" ):
                listener.enterExprlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprlist" ):
                listener.exitExprlist(self)




    def exprlist(self):

        localctx = RParser.ExprlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_exprlist)
        self._la = 0 # Token type
        try:
            self.state = 167
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [RParser.T__9, RParser.T__10, RParser.T__20, RParser.T__25, RParser.T__32, RParser.T__33, RParser.T__35, RParser.T__37, RParser.T__39, RParser.T__41, RParser.T__42, RParser.T__43, RParser.T__44, RParser.T__45, RParser.T__46, RParser.T__47, RParser.T__48, RParser.T__49, RParser.T__50, RParser.T__51, RParser.HEX, RParser.INT, RParser.FLOAT, RParser.COMPLEX, RParser.STRING, RParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 156
                self.expr(0)
                self.state = 163
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==RParser.T__0 or _la==RParser.NL:
                    self.state = 157
                    _la = self._input.LA(1)
                    if not(_la==RParser.T__0 or _la==RParser.NL):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 159
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << RParser.T__9) | (1 << RParser.T__10) | (1 << RParser.T__20) | (1 << RParser.T__25) | (1 << RParser.T__32) | (1 << RParser.T__33) | (1 << RParser.T__35) | (1 << RParser.T__37) | (1 << RParser.T__39) | (1 << RParser.T__41) | (1 << RParser.T__42) | (1 << RParser.T__43) | (1 << RParser.T__44) | (1 << RParser.T__45) | (1 << RParser.T__46) | (1 << RParser.T__47) | (1 << RParser.T__48) | (1 << RParser.T__49) | (1 << RParser.T__50) | (1 << RParser.T__51) | (1 << RParser.HEX) | (1 << RParser.INT) | (1 << RParser.FLOAT) | (1 << RParser.COMPLEX) | (1 << RParser.STRING) | (1 << RParser.ID))) != 0):
                        self.state = 158
                        self.expr(0)


                    self.state = 165
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [RParser.T__36]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FormlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def form(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RParser.FormContext)
            else:
                return self.getTypedRuleContext(RParser.FormContext,i)


        def getRuleIndex(self):
            return RParser.RULE_formlist
